# fic_archive

./: Cargo.toml
src/: args.rs  client.rs  error.rs  main.rs  sql.rs  structs.rs
src/parser/: ao3.rs  ffnet.rs  katalepsis.rs  mod.rs  royalroad.rs  xenforo.rs
src/tui/: event.rs  mod.rs
