[package]
name = "fic_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = { version = "0.4", features = ["default", "serde"] }
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.0"
html2md = "0.2.13"
once_cell = "1.14"
pandoc = "0.8.9"
rayon = "1.5.3"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
select = "0.5"
serde = "1.0.146"
tokio = { version = "1", features = ["full"] }
